--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 	<body>
 		<h1>Github Repository</h1>
 		<p>Dit is even een test hoe je git kunt pushen.</p>
+
+		<h2>Dit is een ondertitel.</h2>
+		<p>DIt is een tweede paragraaf.</p>
 	</body>
 </html>
